# fastai-fastbook

./: 01_intro.ipynb  02_production.ipynb  03_ethics.ipynb  04_mnist_basics.ipynb  README.md  flake.nix  pyproject.toml  shell.nix
setup/: README
