[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Pouya Rezaeifakhr <pouya@sonic.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1"
duckduckgo-search = "^6.2.0"
fastai = "^2.7.15"
jupyterlab = "^4.2.3"
ipython = "^8.26.0"
nbdev = "^2.3.25"
fastbook = "^0.0.29"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
